--- a/content/me/bio.njk
+++ b/content/me/bio.njk
@@ -1,11 +1,11 @@
 ---
 title: Bio
 description: Not as long as other autobiographies but every bit as pompous.
-graphic: '20.png'
+graphic: 'graphic-jasonvelazquez.png'
 graphicAlt: 'illustration of a mask'
 sub: me
 ---
-<h1>{{ title }}</h1>
+<h1>Jason's {{ title }}</h1>
 
 <p class="lead under-title">{{ description }}</p>
 
