--- a/content/me/bio.njk
+++ b/content/me/bio.njk
@@ -1,7 +1,7 @@
 ---
 title: Bio
 description: Not as long as other autobiographies but every bit as pompous.
-graphic: 'graphic-jasonvelazquez.png'
+graphic: '20a.png'
 graphicAlt: 'illustration of a mask'
 sub: me
 ---
