--- a/content/me/bio.njk
+++ b/content/me/bio.njk
@@ -24,7 +24,7 @@ sub: me
 
 <p>Anyway, that's an original story idea. Please don't steal it <a href="https://en.wikipedia.org/wiki/The_Last_of_Us_(TV_series)" title="The Last of Us" target="_blank">.</a></p>
 
-<p>If my writing has provided value to your life, you can buy me a treat. A venti Dragon Drink is my favorite. Here's <a href="https://account.venmo.com/u/jasondotgovmy" title="my venmo" target="_blank">Venmo</a>.</p>
+<p>If my writing has provided value to your life, and you want to say thanks, I take both [friendly emails](mailto:inbox@jvelazquez.email) and cold hard [motherfucking cash](https://www.buymeacoffee.com/fromjason) (you can buy me a coffee thanks).</p>
 
 <p>I love you,</p>
 
