--- a/content/me/bio.njk
+++ b/content/me/bio.njk
@@ -12,7 +12,7 @@ sub: me
 
 <p>It's me, Jason. I'm a freelancer, occasional storyteller, and self-taught over-thinker.</p>
 
-<p>I'm also a writer and web developer. <a href="https://www.pixelriot.io" rel="me">Pixel Riot</a> is my freelance business. It's going through a bit of a transitional period at the moment, as I shift from offering services to creating digital products. Check out my <a href="/me/now/" title="what I'm up to now">Now</a> page.</p>
+<p>I'm also a writer and web developer. <a href="https://www.pixelriot.io" rel="me">Pixel Riot</a> is my freelance business. It's going through a bit of a transitional period at the moment, as I shift from offering services to creating digital products. Check out my <a href="https://omg.fromjason.xyz/now" title="what I'm up to now">Now</a> page.</p>
 
 <p>I enjoy curating lists—an activity that feeds my brain— and sharing those lists with my friends, unsolicited. I also have a passion for well-designed things. One of my favorite books is <i><a href="https://en.wikipedia.org/wiki/The_Design_of_Everyday_Things" target="_blank">The Design of Everyday Things</a></i> by Donald Norman.</p>
 
