--- a/content/me/bio.njk
+++ b/content/me/bio.njk
@@ -1,13 +1,14 @@
 ---
 title: Bio
 description: Not as long as other autobiographies but every bit as pompous.
-graphic: '20a.png'
+graphic: 'jasonvelazquez.jpg'
 graphicAlt: 'illustration of a mask'
 sub: me
 ---
-<h1>Jason's {{ title }}</h1>
 
-<p class="lead under-title">{{ description }}</p>
+<h1>Jason's Bio</h1>
+
+<p class="lead under-title">Not as long as other autobiographies but every bit as pompous.</p>
 
 
 <p>It's me, Jason. I'm a freelancer, occasional storyteller, and self-taught over-thinker.</p>
@@ -24,8 +25,9 @@ sub: me
 
 <p>Anyway, that's an original story idea. Please don't steal it <a href="https://en.wikipedia.org/wiki/The_Last_of_Us_(TV_series)" title="The Last of Us" target="_blank">.</a></p>
 
-<p>If you enjoyed my writing and you want to say thanks, I take both <a href="mailto:inbox@jvelazquez.email">friendly emails</a> and <a href="https://www.buymeacoffee.com/fromjason">cold hard motherfucking cash</a> (you can buy me a coffee thanks).</p>
+<p>If you enjoyed my writing and you want to say thanks, I take both <a href="mailto:inbox@jvelazquez.email">friendly emails</a> and <a href="https://www.buymeacoffee.com/fromjason">cold hard motherfucking cash</a> (you can buy me a coffee, thanks).</p>
 
 <p>I love you,</p>
 
 <p>— Jason</p>
+    
